package com.udacity.project4

import android.app.Application
import androidx.test.core.app.ActivityScenario
import androidx.test.core.app.ApplicationProvider.getApplicationContext
import androidx.test.espresso.Espresso
import androidx.test.espresso.IdlingRegistry
import androidx.test.espresso.action.ViewActions.*
import androidx.test.espresso.assertion.ViewAssertions
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.matcher.RootMatchers
import androidx.test.espresso.matcher.ViewMatchers
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.filters.LargeTest
import androidx.test.rule.ActivityTestRule
import com.google.android.material.internal.ContextUtils.getActivity
import com.udacity.project4.locationreminders.RemindersActivity
import com.udacity.project4.locationreminders.data.ReminderDataSource
import com.udacity.project4.locationreminders.data.local.LocalDB
import com.udacity.project4.locationreminders.data.local.RemindersLocalRepository
import com.udacity.project4.locationreminders.reminderslist.RemindersListViewModel
import com.udacity.project4.locationreminders.savereminder.SaveReminderViewModel
import com.udacity.project4.util.DataBindingIdlingResource
import com.udacity.project4.util.forceClick
import com.udacity.project4.util.monitorActivity
import com.udacity.project4.utils.EspressoIdlingResource
import kotlinx.coroutines.runBlocking
import kotlinx.coroutines.test.runBlockingTest
import org.hamcrest.core.Is.`is`
import org.hamcrest.core.IsNot.not
import org.junit.After
import org.junit.Before
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith
import org.koin.androidx.viewmodel.dsl.viewModel
import org.koin.core.context.startKoin
import org.koin.core.context.stopKoin
import org.koin.dsl.module
import org.koin.test.AutoCloseKoinTest
import org.koin.test.get
import org.robolectric.annotation.Config


@RunWith(AndroidJUnit4::class)
@Config(qualifiers = "h750dp")
@LargeTest
//END TO END test to black box test the app
class RemindersActivityTest :
    AutoCloseKoinTest() {// Extended Koin Test - embed autoclose @after method to close Koin after every test

    private lateinit var repository: ReminderDataSource
    private lateinit var appContext: Application
    private val dataBindingIdlingResource = DataBindingIdlingResource()
    /**
     * As we use Koin as a Service Locator Library to develop our code, we'll also use Koin to test our code.
     * at this step we will initialize Koin related code to be able to use it in out testing.
     */
    @Before
    fun init() {
        stopKoin()//stop the original app koin
        appContext = getApplicationContext()
        val myModule = module {
            viewModel {
                RemindersListViewModel(
                    appContext,
                    get() as ReminderDataSource
                )
            }
            single {
                SaveReminderViewModel(
                    appContext,
                    get() as ReminderDataSource
                )
            }
            single { RemindersLocalRepository(get()) as ReminderDataSource }
            single { LocalDB.createRemindersDao(appContext) }
        }
        //declare a new koin module
        startKoin {
            modules(listOf(myModule))
        }
        //Get our real repository
        repository = get()

        //clear the data to start fresh
        runBlocking {
            repository.deleteAllReminders()
        }
    }


//    TODO: add End to End testing to the app

    @Before
    fun registerIdlingResource() {
        IdlingRegistry.getInstance().register(EspressoIdlingResource.countingIdlingResource)
        IdlingRegistry.getInstance().register(dataBindingIdlingResource)
    }

    /**
     * Unregister your Idling Resource so it can be garbage collected and does not leak any memory.
     */
    @After
    fun unregisterIdlingResource() {
        IdlingRegistry.getInstance().unregister(EspressoIdlingResource.countingIdlingResource)
        IdlingRegistry.getInstance().unregister(dataBindingIdlingResource)
    }


    @Test
    fun addReminde() {
        runBlockingTest {
            val activityScenario = ActivityScenario.launch(RemindersActivity::class.java)
            dataBindingIdlingResource.monitorActivity(activityScenario)

            Espresso.onView(ViewMatchers.withId(R.id.noDataTextView))
                .check(ViewAssertions.matches(isDisplayed()))

            Espresso.onView(withId(R.id.addReminderFAB)).perform(click())

            Espresso.onView(withId(R.id.reminderTitle)).perform(typeText("title"), closeSoftKeyboard())
            Espresso.onView(withId(R.id.reminderDescription)).perform(typeText("description"), closeSoftKeyboard())
            //Thread.sleep(1000)
            Espresso.onView(withId(R.id.select_Location))
                .perform(click())

            Espresso.onView(withId(R.id.map_container)).perform(longClick())
            Espresso.onView(withId(R.id.confirm_location)).perform(click())

            Espresso.onView(withId(R.id.saveReminder)).perform(click())

            Espresso.onView(withText("title")).check(ViewAssertions.matches(isDisplayed()))

            activityScenario.close()
        }
    }


    @Test
    fun saveReminder_TitleErrorEvent() {
        runBlocking {
            val activityScenario = ActivityScenario.launch(RemindersActivity::class.java)
            dataBindingIdlingResource.monitorActivity(activityScenario)

            Espresso.onView(ViewMatchers.withId(R.id.noDataTextView))
                .check(ViewAssertions.matches(isDisplayed()))

            Espresso.onView(withId(R.id.addReminderFAB)).perform(click())
            Espresso.onView(withId(R.id.reminderTitle)).perform(typeText("title"))
            Espresso.closeSoftKeyboard()
            Espresso.onView(withId(R.id.reminderDescription)).perform(typeText("description"))
            Espresso.closeSoftKeyboard()
            Espresso.onView(withId(R.id.saveReminder)).perform(click())

            val errorMsg = appContext.getString(R.string.err_select_location)
            Espresso.onView(withText(errorMsg)).check(ViewAssertions.matches(isDisplayed()))

            activityScenario.close()
        }
    }


    @Test
    fun saveReminder_LocationErrorEvent() {
        runBlocking {
            val activityScenario = ActivityScenario.launch(RemindersActivity::class.java)
            dataBindingIdlingResource.monitorActivity(activityScenario)

            Espresso.onView(ViewMatchers.withId(R.id.noDataTextView))
                .check(ViewAssertions.matches(isDisplayed()))

            Espresso.onView(withId(R.id.addReminderFAB)).perform(click())

            Espresso.onView(withId(R.id.saveReminder)).perform(click())

            val errorMsg = appContext.getString(R.string.err_enter_title)
            Espresso.onView(withText(errorMsg)).check(ViewAssertions.matches(isDisplayed()))

            activityScenario.close()
        }
    }


    @Test
    fun saveReminder_ShowToastMsgEvent() {
        runBlocking {
            val activityScenario = ActivityScenario.launch(RemindersActivity::class.java)
            dataBindingIdlingResource.monitorActivity(activityScenario)

            Espresso.onView(withId(R.id.addReminderFAB)).perform(click())

            Espresso.onView(withId(R.id.reminderTitle)).perform(typeText("title"))
            Espresso.closeSoftKeyboard()
            Espresso.onView(withId(R.id.reminderDescription)).perform(typeText("description"))
            Espresso.closeSoftKeyboard()
            Espresso.onView(withId(R.id.select_Location)).perform(click())

            Espresso.onView(withId(R.id.map_container)).perform(longClick())

            Espresso.onView(withId(R.id.confirm_location)).perform(click())

            Espresso.onView(withId(R.id.saveReminder)).perform(click())

            val successMsg = appContext.getString(R.string.geofences_added)
            Espresso.onView(withText(successMsg))
                .inRoot(
                    RootMatchers.withDecorView(
                        not(
                            `is`(
                                getActivity(appContext)?.getWindow()?.getDecorView()
                            )
                        )
                    )
                ).check(
                    matches(
                        isDisplayed()
                    )
                )

            activityScenario.close()
        }
    }

}
